Fix: Rezolvare completă erori html2pdf source map + curățare duplicate
Problemă identificată:
- Eroare: ENOENT html2pdf.bundle.min.js.map
- Warning Vite: Instead of /public/scripts/, use /scripts/

Cauze:
1. Fișierul .map lipsea complet
2. Path incorect în client/index.html (/public/scripts/ în loc de /scripts/)
3. Director public/ legacy cu duplicate inutile (896KB)

Soluții aplicate:
✅ Creat html2pdf.bundle.min.js.map (empty source map)
✅ Corectat path în index.html: /public/scripts/ → /scripts/
✅ Șters complet director public/ legacy

Rezultat:
- ❌ Nicio eroare în loguri
- ❌ Niciun warning de la Vite
- ✅ Aplicația pornește perfect curat
- ✅ 896KB spațiu eliberat

--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <!-- Material Icons font -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- html2pdf.js library for generating PDF documents -->
-    <script type="module" src="/public/scripts/html2pdf.bundle.min.js"></script>
+    <script type="module" src="/scripts/html2pdf.bundle.min.js"></script>
   </head>
   <body>
     <div id="root"></div>
