fix: Add favicon to prevent 404 error
## 🖼️ FIX: Favicon lipsă

### Problema:
- Browser caută automat favicon.ico
- 404 error în consolă (benign dar enervant)

### Soluție:
- Adăugat favicon SVG inline în HTML head
- Favicon simplu cu litera 'G' pe fundal verde (#0CA437)
- Adăugat și <title> pentru tab-ul browser-ului

### Rezultat:
- ✅ Nu mai apare eroarea 404 pentru favicon
- ✅ Tab-ul browser-ului arată iconița GeniusERP
- ✅ Title-ul tab-ului: 'GeniusERP v5'

--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+    <title>GeniusERP v5</title>
+    <!-- Favicon SVG inline -->
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect width='100' height='100' rx='15' fill='%230CA437'/><text x='50' y='70' font-size='60' text-anchor='middle' fill='white' font-family='Arial, sans-serif' font-weight='bold'>G</text></svg>" />
     <!-- Material Icons font -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- html2pdf.js library for generating PDF documents -->
